--- a/css/server_stats.css
+++ b/css/server_stats.css
@@ -4,14 +4,25 @@
 .graph_load_average,
 .graph_cpu,
 .graph_memory {
-    margin-bottom:5px;
-    padding:0;
+    margin:0;
+    padding: 0;
+    width: 200px;
+    height: 25px;
+    border: 1px solid #aeaeae;
+    background-color: #eaeaea;
+
+
+}
+.graph_disk{
+    margin:0;
+    padding: 0;
     width: 200px;
     height: 50px;
     border: 1px solid #aeaeae;
     background-color: #eaeaea;
-}
 
+
+}
 
 h4{
     margin: 0;
