--- a/css/server_stats.css
+++ b/css/server_stats.css
@@ -1,28 +1,20 @@
 
 
-
+.server_name{
+    margin: 1px;
+}
 .graph_load_average,
-.graph_cpu,
-.graph_memory {
+.graph_cpu{
     margin:0;
     padding: 0;
-    width: 200px;
+    width: 88px;
     height: 25px;
     border: 1px solid #aeaeae;
     background-color: #eaeaea;
 
 
 }
-.graph_disk{
-    margin:0;
-    padding: 0;
-    width: 200px;
-    height: 50px;
-    border: 1px solid #aeaeae;
-    background-color: #eaeaea;
 
-
-}
 
 h4{
     margin: 0;
@@ -39,4 +31,48 @@ h5{
     font-size: 15px;
     font-family: arial;
     display: inline-block;
+}
+
+.container_stats{
+    width: 200px;
+    margin: 1px;
+    padding: 3px;
+    padding-left: 7px;
+    padding-right: 7px;
+    border: solid 1px black;
+}
+.contain{
+    padding: 2px;
+    margin:1px;
+    padding-right: 5px;
+    background-color: #e6e6e6;
+    border-radius: 5px;
+}
+
+.container_stats > .contain{
+    float: left;
+    box-shadow: 2px 2px 2px #888888;
+}
+
+.contain > .indicator{
+    float:left;
+}
+
+.indicator{
+    width: 10px;
+    height:10px;
+    margin:4px;
+    margin-left: 7px;
+    margin-right: 7px;
+    border-radius: 5px;
+    background-color: green;
+}
+input {
+    width: 23px;
+    height: 13px;
+}
+
+.container_option{
+    padding-left: 5px;
+    width: 165px;
 }
