--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,4 @@
 
-table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100px;
-}
-
-td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 1;
-}
-
-tr:nth-child(even) {
-    background-color: #dddddd;
-}
-
 body{
     background-color: #DFE2DB;
 }
@@ -22,31 +6,9 @@ div{
     background-color: white;
 
 }
-.container_server_stats{
-    border: 1px solid black;
-    position: relative;
-    padding: 5px;
-    width: 208px;
-    margin: 2px;
-}
-.container_disk_stats{
-    border: 1px solid black;
-    position: relative;
-    padding: 5px;
-    width: 208px;
-    margin: 2px;
-}
-
-
 body > div {
     float:left;
+    overflow: hidden;
     box-shadow: 2px 2px 2px #888888;
-}
 
-.label > span{
-    display: inline-block;
-}
-
-.title > span{
-    display: inline-block;
 }
